--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,8 @@ menu:
       url: https://github.com/rstudio/blogdown
     - name: Twitter
       url: https://twitter.com/rstudio
+    - name: CV
+      url: /CV/
 params:
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
