Update Github url

--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ menu:
     - name: About
       url: /about/
     - name: GitHub
-      url: https://github.com/rstudio/blogdown
+      url: https://github.com/ems1010
     - name: Twitter
       url: https://twitter.com/sociolinguo
     - name: CV
