--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseurl: /
 languageCode: en-us
-title: A Hugo website
+title: Elena Sheard
 theme: hugo-lithium
 googleAnalytics: ''
 disqusShortname: ''
