--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ permalinks:
   post: /:year/:month/:day/:slug/
 menu:
   main:
-    - name: About
+    - name: Elena Sheard
       url: /about/
     - name: GitHub
       url: https://github.com/ems1010
